add script to make the Mobile Navigation work

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="js/script.js"></script>
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
@@ -35,7 +36,7 @@
           <li><a class="main-nav-link" href="#">Meals</a></li>
           <li><a class="main-nav-link" href="#">Testinomials</a></li>
           <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -567,7 +568,7 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2024 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2024</span> by Omnifood, Inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
