smooth scrolling & add btn back to top website

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testinomials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li>
+            <a class="main-nav-link" href="#testimonials">Testinomials</a>
+          </li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
           <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
@@ -57,10 +59,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm">
+            <a href="#cta" class="btn btn--full margin-right-sm">
               Start eating well</a
             >
-            <a href="#" class="btn btn--outline"> Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline"> Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="customer photo" />
@@ -98,7 +100,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -164,7 +166,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -286,7 +288,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testinomials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -375,7 +377,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -485,7 +487,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -568,7 +570,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; <span class="year">2024</span> by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2024</span> by Omnifood, Inc.
+            All rights reserved.
           </p>
         </div>
         <div class="address-col">
@@ -614,5 +617,10 @@
         </nav>
       </div>
     </footer>
+    <div class="btn-up-nav">
+      <a href="#" class="btn-up-to-top"
+        ><ion-icon class="icon-up" name="chevron-up-outline"></ion-icon
+      ></a>
+    </div>
   </body>
 </html>
