--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food supcription will make you eat healthy again,365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
+    <title>Omnifood &mdash; Never cook again!</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omnifood</title>
+
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -84,7 +95,7 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img src="img/hero.png" alt="image Hero" class="hero-img" />
+            <img src="img/hero-min-2.webp" alt="image Hero" class="hero-img" />
           </div>
         </div>
       </section>
