add netlify form attributes

--- a/index.html
+++ b/index.html
@@ -513,13 +513,14 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form action="#" class="cta-form">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
                     type="text"
                     placeholder="Sophia Pham"
+                    name="full-name"
                     required
                   />
                 </div>
@@ -530,13 +531,18 @@
                     id="email"
                     type="email"
                     placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
 
                 <div>
                   <label for="">Where did you hear from us?</label>
-                  <select aria-placeholder="" name="" id="select-where">
+                  <select
+                    aria-placeholder=""
+                    name="select-where"
+                    id="select-where"
+                  >
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">YouTube video</option>
