--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <input type="checkbox" />
                     <input type="number" /> -->
                 </div>
-                <button class="btn btn--form">Sign up now</button>
+                <button class="btn btn--form" type="submit">Sign up now</button>
               </form>
             </div>
             <div
